--- a/CodeEditor.csproj
+++ b/CodeEditor.csproj
@@ -12,10 +12,8 @@
       <_ContentIncludedByDefault Remove="wwwroot\js\lib\codemirror.min.js" />
       <_ContentIncludedByDefault Remove="wwwroot\js\lib\lang-javascript.min.js" />
       <_ContentIncludedByDefault Remove="wwwroot\css\overrides-fixes.css" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="wwwroot\js\lib\" />
+      <_ContentIncludedByDefault Remove="wwwroot\js\components\code-mirror-editor.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\js\components\code-editor.js" />
     </ItemGroup>
 
 </Project>
