--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "heroku-postbuild": "npm install && npm run build"
   },
   "dependencies": {
+    "ace-builds": "^1.37.1",
+    "split-grid": "^1.0.11",
+    "umbrellajs": "^3.3.3",
     "vite": "^6.0.6"
   },
   "engines": {
