--- a/CodeEditor.csproj
+++ b/CodeEditor.csproj
@@ -17,6 +17,13 @@
         <_ContentIncludedByDefault Remove="wwwroot\css\views\editor.css" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="dotenv.net" Version="3.2.1" />
+      <PackageReference Include="IntelligentHack.IntelligentCache" Version="3.3.0" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.StackExchangeRedis" Version="9.0.0" />
+      <PackageReference Include="StackExchange.Redis" Version="2.8.24" />
+    </ItemGroup>
+
     <Target Name="ViteBuild" AfterTargets="Build">
         <Exec Command="npm i &amp;&amp; npm run build" />
     </Target>
