--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@microsoft/signalr": "^8.0.7",
     "ace-builds": "^1.37.1",
     "lit": "^3.2.1",
+    "material-icons": "^1.13.12",
     "split-grid": "^1.0.11",
     "umbrellajs": "^3.3.3",
     "vite": "^6.0.6"
