--- a/CodeEditor.csproj
+++ b/CodeEditor.csproj
@@ -25,6 +25,7 @@
       <PackageReference Include="dotenv.net" Version="3.2.1" />
       <PackageReference Include="IntelligentHack.IntelligentCache" Version="3.3.0" />
       <PackageReference Include="Microsoft.AspNetCore.SignalR.StackExchangeRedis" Version="9.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="StackExchange.Redis" Version="2.8.24" />
     </ItemGroup>
 
